--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -1,7 +1,7 @@
-$font-family-sans-serif:  'Open Sans', Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-family-serif:       'Noto Serif', Georgia, "Times New Roman", Times, serif;
+$font-family-sans-serif: 'Open Sans', Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-serif: 'Noto Serif', Georgia, "Times New Roman", Times, serif;
 $font-family-base: $font-family-serif;
-$headings-font-family:    $font-family-sans-serif;
+$headings-font-family: $font-family-sans-serif;
 $breadcrumb-divider: "→";
 
 // Then import Bootstrap an BootstrapVue SCSS files (order is important)
@@ -60,9 +60,11 @@ html {
   color: $text-muted;
   background-color: #f5f5f5;
   text-align: center;
+
   & > .container {
     display: table-cell;
     vertical-align: middle;
+
     p:last-child {
       margin-bottom: 0;
     }
@@ -219,9 +221,17 @@ $bs-height-xs: floor($btn-line-height + $btn-padding-x-sm * 2);
   @include button-variant($color-bg, $color-bg);
 }
 
-.btn-facebook    { @include btn-social(#3b5998); }
-.btn-google      { @include btn-social(#dd4b39); }
-.btn-github     { @include btn-social(#444444); }
+.btn-facebook {
+  @include btn-social(#3b5998);
+}
+
+.btn-google {
+  @include btn-social(#dd4b39);
+}
+
+.btn-github {
+  @include btn-social(#444444);
+}
 
 // Apache
 
@@ -283,10 +293,12 @@ div.example {
   margin: 1em 2em 1em 1em;
   width: 50%;
   background-color: #e5ecf3;
+
   p, pre, table {
     padding: 0;
     margin: 0;
   }
+
   p {
     line-height: 1em;
   }
@@ -297,11 +309,13 @@ div.note, div.warning {
   color: #036;
   padding: 0.5em;
   margin: 1em 2em 1em 1em;
+
   div.example {
     background-color: transparent;
     color: inherit;
     margin-right: 1em;
   }
+
   p {
     margin: 0.5em 0 0 0;
     padding: 0;
