fix: footer fixed

--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -55,7 +55,7 @@ html {
   display: table;
   width: 100%;
   height: $footer-height;
-  border-top: 1px solid $hr-border-color;
+  border-top: 1px solid #ddd;
   color: $text-muted;
   background-color: #f5f5f5;
   text-align: center;
