--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -116,6 +116,9 @@ $bs-height-xs: floor($btn-line-height + $btn-padding-x-sm * 2);
   overflow: hidden;
   text-overflow: ellipsis;
 
+  display: flex;
+  gap: 0.5rem;
+
   > :first-child {
     position: absolute;
     left: 0;
@@ -211,6 +214,10 @@ $bs-height-xs: floor($btn-line-height + $btn-padding-x-sm * 2);
     padding-right: 0;
   }
 }
+
+.btn-google { background-color: #dd4b39; color: white; }
+.btn-github { background-color: #333; color: white; }
+.btn-yandex { background-color: #f00; color: white; }
 
 @mixin btn-social($color-bg, $color: null) {
   @if $color {
