--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -24,6 +24,14 @@ body {
   margin-bottom: $footer-height * 2.5;
 }
 
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 .card {
   margin-bottom: $spacer;
 }
