--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -1,16 +1,16 @@
-$font-family-sans-serif: 'Open Sans', Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-family-serif: 'Noto Serif', Georgia, "Times New Roman", Times, serif;
+$font-family-sans-serif: "Open Sans", Verdana, "Helvetica Neue", Helvetica,
+  Arial, sans-serif;
+$font-family-serif: "Noto Serif", Georgia, "Times New Roman", Times, serif;
 $font-family-base: $font-family-serif;
 $headings-font-family: $font-family-sans-serif;
 $breadcrumb-divider: "→";
 
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
 @import "@marcoschulte/vue3-progress/style";
 
 $footer-height: ($spacer);
 
 body {
-
   > .container {
     padding-top: $spacer;
     padding-bottom: $spacer;
@@ -48,7 +48,10 @@ a:hover {
   display: block;
 }
 
-.nav, .navbar, .breadcrumb, .text-muted {
+.nav,
+.navbar,
+.breadcrumb,
+.text-muted {
   font-family: $font-family-sans-serif;
 }
 
@@ -90,8 +93,18 @@ td {
   }
 }
 
-h1, h2, h3, h4, h5, h6,
-.h1, .h2, .h3, .h4, .h5, .h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
   small,
   .small {
     color: $gray-500;
@@ -223,9 +236,18 @@ $bs-height-xs: floor($btn-line-height + $btn-padding-x-sm * 2);
   }
 }
 
-.btn-google { background-color: #dd4b39; color: white; }
-.btn-github { background-color: #333; color: white; }
-.btn-yandex { background-color: #f00; color: white; }
+.btn-google {
+  background-color: #dd4b39;
+  color: white;
+}
+.btn-github {
+  background-color: #333;
+  color: white;
+}
+.btn-yandex {
+  background-color: #f00;
+  color: white;
+}
 
 @mixin btn-social($color-bg, $color: null) {
   @if $color {
@@ -249,7 +271,8 @@ $bs-height-xs: floor($btn-line-height + $btn-padding-x-sm * 2);
 
 // Apache
 
-pre.code, code {
+pre.code,
+code {
   color: #0d0d97;
 }
 
@@ -268,7 +291,10 @@ pre.code {
 
 /* Tables */
 
-div.table, div.breadcrumbs, div.bottomMenuContainer, div.directive {
+div.table,
+div.breadcrumbs,
+div.bottomMenuContainer,
+div.directive {
   height: 0;
 }
 
@@ -277,7 +303,10 @@ div.tr {
 }
 
 /* не для IE */
-div.table[class], div.breadcrumbs[class], div.bottomMenuContainer[class], div.directive[class] {
+div.table[class],
+div.breadcrumbs[class],
+div.bottomMenuContainer[class],
+div.directive[class] {
   height: auto;
   display: table;
 }
@@ -287,12 +316,14 @@ div.tr[class] {
   display: table-row;
 }
 
-div.td[class], div.th[class] {
+div.td[class],
+div.th[class] {
   float: none;
   display: table-cell;
 }
 
-div.td, div.th {
+div.td,
+div.th {
   height: 100%;
   float: left;
 }
@@ -308,7 +339,9 @@ div.example {
   width: 50%;
   background-color: #e5ecf3;
 
-  p, pre, table {
+  p,
+  pre,
+  table {
     padding: 0;
     margin: 0;
   }
@@ -318,7 +351,8 @@ div.example {
   }
 }
 
-div.note, div.warning {
+div.note,
+div.warning {
   background-color: #eee;
   color: #036;
   padding: 0.5em;
@@ -337,7 +371,8 @@ div.note, div.warning {
 }
 
 div.directive {
-  div.td, div.th {
+  div.td,
+  div.th {
     padding: 3px;
   }
 }
@@ -355,5 +390,10 @@ table {
 
 .breadcrumb {
   --bs-breadcrumb-bg: #e9ecef;
-  padding: .75rem 1rem;
+  padding: 0.75rem 1rem;
+}
+
+:root {
+  --vue3-progress-bar-height: 4px;
+  --vue3-progress-bar-color: #32a6db;
 }
